# Technical-support-AI-bot

./: .env  .gitignore  README.md  Technical Summary.md  app.py  pyproject.toml  requirements.txt
DB/faiss_index/: index.faiss  index.pkl
